Set alignment styling. Gotta fix this scroll bug Whenever you scroll down on the photo library tab, the contents of the page seem to spill over the navigation bar. This is not desireable.

--- a/style.css
+++ b/style.css
@@ -38,9 +38,14 @@
   background-color: #04AA6D;
 }
 
-.TitleLine {
+.PageTitle {
   position: absolute;
-  width: 100%;
-  top: 75px;
-  height: 100px;
+  top : 50px;
+}
+
+.PageWriting * {
+  position: relative;
+  font-size : 16px;
+  font-style : normal;
+  font-weight: normal;
 }
